--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,4 +25,6 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^9.4.0"
+black = "^25.1.0"
+isort = "^6.0.1"
 
